trying to fix contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -35,7 +35,8 @@ header {
       border-radius: 15px;
 }
 .joinp {
-  background: radial-gradient(rgb(252, 251, 251), #f3faf9);  
+  background-color:#6f8b87;  
+  /* radial-gradient(rgb(252, 251, 251), #f3faf9);  */
   /* opacity: 0.8; */
   margin-top: 3rem;
   margin-left: 1rem;
